Adding carrousel for best movies

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <button value="id" onclick="view_modal(this)">Voir le film</button>
         </div>
     </section>
-
-
-
-
+    <section class="carousel">
+        <h1>Meilleurs films</h1>
+        <ul></ul>
+    </section>
 
 
 
