--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
             <button value="id" onclick="view_modal(this)">Voir le film</button>
         </div>
     </section>
-    <section class="carousel">
+    <section id="bests" class="carousel">
         <h1>Meilleurs films</h1>
+        <ul></ul>
+    </section>
+    <section id="action" class="carousel">
+        <h1>Meilleurs films d'action</h1>
+        <ul></ul>
+    </section>
+    <section id="horror" class="carousel">
+        <h1>Meilleurs films d'horreur</h1>
+        <ul></ul>
+    </section>
+    <section id="war" class="carousel">
+        <h1>Meilleurs films de guerre</h1>
         <ul></ul>
     </section>
 
